thrd and second

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <div>
-        <h3> My First website</h3>
+        <h3> My First blog</h3>
+        <p> 
+           Bangladesh, to the east of India on the Bay of Bengal, is a South Asian country marked by lush greenery and many waterways. Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains, and travel by boat is common. On the southern coast, the Sundarbans, an enormous mangrove forest shared with Eastern India, is home to the royal Bengal tiger. 
+        </p>
+    </div>
+    <div>
+        <h3> My Second blog</h3>
+        <p> 
+           Bangladesh, to the east of India on the Bay of Bengal, is a South Asian country marked by lush greenery and many waterways. Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains, and travel by boat is common. On the southern coast, the Sundarbans, an enormous mangrove forest shared with Eastern India, is home to the royal Bengal tiger. 
+        </p>
+    </div>
+
+<div>
+        <h3> My third blog</h3>
         <p> 
            Bangladesh, to the east of India on the Bay of Bengal, is a South Asian country marked by lush greenery and many waterways. Its Padma (Ganges), Meghna and Jamuna rivers create fertile plains, and travel by boat is common. On the southern coast, the Sundarbans, an enormous mangrove forest shared with Eastern India, is home to the royal Bengal tiger. 
         </p>
